Corrections des fichiers: Mise à jour de package et modifications de structure